# ferry

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: release.yml
docs/: architecture.md  usage.md
openspec/changes/add-timeout-and-retry-resilience/: design.md  proposal.md  tasks.md
openspec/changes/add-timeout-and-retry-resilience/specs/connection-resilience/: spec.md
openspec/changes/add-timeout-and-retry-resilience/specs/global-network-timeout/: spec.md
src/: client.rs  config.rs  lib.rs  main.rs  noise.rs  protocol.rs  server.rs
src/protocol/: mod.rs  noise.rs
src/proxy/: http.rs  mod.rs  socks5.rs
