[package]
name = "ferry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
atty = "0.2.14"
bincode = "2.0.1"
fdlimit = "0.3.0"
hex = "0.4.3"
notify = "8.2.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
snow = { version = "0.10.0", default-features = false, features = [ "use-getrandom", "use-curve25519", "use-chacha20poly1305", "use-blake2", "std" ] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
futures-util = "0.3.31"
pin-project = "1.1.10"
socket2 = { version = "0.6.0", features = ["all"] }
url = "2.5.4"
thiserror = "2.0.16"
httparse = "1.10.1"
base64 = "0.22.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
